Lesson 10: Add cart (web & api)
