# app/Http/Resources/CartItemResource.php
@@ -1,0 +1,26 @@
+<?php
+
+namespace App\Http\Resources;
+
+use Illuminate\Http\Resources\Json\JsonResource;
+/**
+ * @mixin CartItem
+ */
+class CartItemResource extends JsonResource
+{
+    /**
+     * Transform the resource into an array.
+     *
+     * @param  \Illuminate\Http\Request  $request
+     * @return array|\Illuminate\Contracts\Support\Arrayable|\JsonSerializable
+     */
+    public function toArray($request)
+    {
+        return [
+            'product' => new ListProductResource($this->product),
+            'quantity' => $this->quantity,
+            'price_item' => $this->price_item,
+            'price_total' => $this->price_total,
+        ];
+    }
+}
